--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
+                                ru.gozhan.equalizer/ru.gozhan.equalizer.EqualizerApplication
                                 ru.gozhan.equalizer/ru.gozhan.equalizer.example.HelloApplication
                             </mainClass>
                             <launcher>app</launcher>
